string builder obsession fix, find bug report